--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,9 +1,9 @@
 <div class="col-md-6 col-lg-6">
   <div class="container">
     <div class="row">
-      <div class="col">
-        <h1>Server1</h1>
-      </div>
+      <form action="">
+
+      </form>
     </div>
   </div>
 </div>
